# Soccer-Engine-FOP-SUT

./: CMakeLists.txt  README.md
engine/core/: vec2.h
engine/entities/: team.c
engine/game/: possession.c
engine/logic/: coach.c  referee.c
